# SingleBinaryWeb

./: .gitignore  Cargo.toml  Makefile.toml  README.md
backend/: Cargo.toml  Makefile.toml
backend/src/: main.rs  routes.rs
frontend/: Cargo.toml  Makefile.toml
frontend/src/: lib.rs
lib/: Cargo.toml  Makefile.toml
