[package]
name = "backend"
version = "0.1.0"
authors = ["Rivsen <duanss@kingnet.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "5.9.0"
actix-web = "3"
mime_guess = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}